--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
   tools:context=".MainActivity">
 
   <android.support.v7.widget.RecyclerView
-    android:id="@+id/listKeyWork"
+    android:id="@+id/listKeyWord"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
