--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,30 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
-  <android.support.v7.widget.RecyclerView
-    android:id="@+id/listKeyWord"
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:orientation="horizontal"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:orientation="vertical"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/key_word"
+      android:textColor="@android:color/black"
+      android:textSize="20sp"
+      android:layout_marginTop="15dp"
+      android:layout_marginStart="15dp" />
+
+    <android.support.v7.widget.RecyclerView
+      android:id="@+id/listKeyWord"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
+      android:orientation="horizontal"
+      android:paddingStart="4dp"
+      android:paddingEnd="4dp" />
+  </LinearLayout>
 
   <ProgressBar
     android:id="@+id/progress"
