--- a/app/src/main/res/layout/key_word_item.xml
+++ b/app/src/main/res/layout/key_word_item.xml
@@ -6,7 +6,8 @@
   android:layout_height="53dp"
   android:paddingStart="12dp"
   android:paddingEnd="12dp"
-  android:layout_marginStart="8dp">
+  android:layout_marginStart="4dp"
+  android:layout_marginEnd="4dp">
   <TextView
     android:id="@+id/keyWord"
     android:layout_width="wrap_content"
